// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors getLeaders should return leaders 1`] = `
Array [
  Object {
    "playerId": 3,
    "position": 1,
    "score": 87,
  },
  Object {
    "playerId": 18,
    "position": 2,
    "score": 86,
  },
  Object {
    "playerId": 2,
    "position": 3,
    "score": 75,
  },
  Object {
    "playerId": 5,
    "position": 4,
    "score": 75,
  },
  Object {
    "playerId": 11,
    "position": 5,
    "score": 73,
  },
  Object {
    "playerId": 13,
    "position": 6,
    "score": 61,
  },
  Object {
    "playerId": 1,
    "position": 7,
    "score": 28,
  },
  Object {
    "playerId": 14,
    "position": 8,
    "score": 23,
  },
]
`;

exports[`selectors getPrizes should return prizes 1`] = `
Array [
  Object {
    "fromPosition": 1,
    "prize": "10836.00",
    "range": "1-2",
    "toPosition": 2,
  },
  Object {
    "fromPosition": 3,
    "prize": "5483.00",
    "range": "3",
    "toPosition": 3,
  },
  Object {
    "fromPosition": 4,
    "prize": "1079.00",
    "range": "4-5",
    "toPosition": 5,
  },
]
`;

exports[`selectors getTopLeaders should return top 4 player when user is not participating 1`] = `
Array [
  Object {
    "playerId": 3,
    "position": 1,
    "prize": "10836.00",
    "score": 87,
  },
  Object {
    "playerId": 18,
    "position": 2,
    "prize": "10836.00",
    "score": 86,
  },
  Object {
    "playerId": 2,
    "position": 3,
    "prize": "5483.00",
    "score": 75,
  },
  Object {
    "playerId": 5,
    "position": 4,
    "prize": "1079.00",
    "score": 75,
  },
]
`;

exports[`selectors getTopLeaders should return user in 4th position when user is playing the tournament but not in top list 1`] = `
Array [
  Object {
    "playerId": 3,
    "position": 1,
    "prize": "10836.00",
    "score": 87,
  },
  Object {
    "playerId": 18,
    "position": 2,
    "prize": "10836.00",
    "score": 86,
  },
  Object {
    "playerId": 2,
    "position": 3,
    "prize": "5483.00",
    "score": 75,
  },
  Object {
    "playerId": 1,
    "position": 7,
    "prize": "0.00",
    "score": 28,
  },
]
`;

exports[`selectors getTopLeaders should return user in in between leaders board 1`] = `
Array [
  Object {
    "playerId": 3,
    "position": 1,
    "prize": "10836.00",
    "score": 87,
  },
  Object {
    "playerId": 18,
    "position": 2,
    "prize": "10836.00",
    "score": 86,
  },
  Object {
    "playerId": 2,
    "position": 3,
    "prize": "5483.00",
    "score": 75,
  },
  Object {
    "playerId": 5,
    "position": 4,
    "prize": "1079.00",
    "score": 75,
  },
]
`;

exports[`selectors getTopLeaders should return user is top postion 1`] = `
Array [
  Object {
    "playerId": 3,
    "position": 1,
    "prize": "10836.00",
    "score": 87,
  },
  Object {
    "playerId": 18,
    "position": 2,
    "prize": "10836.00",
    "score": 86,
  },
  Object {
    "playerId": 2,
    "position": 3,
    "prize": "5483.00",
    "score": 75,
  },
  Object {
    "playerId": 5,
    "position": 4,
    "prize": "1079.00",
    "score": 75,
  },
]
`;

exports[`selectors getUserScore should return user score 1`] = `
Object {
  "playerId": 3,
  "position": 1,
  "score": 87,
}
`;
